--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -1,127 +1,212 @@
-<article class="hero" id="hero">
-
-  <!--HERO-->
-  <section class="hero">
-
-    <!--HEADER--->
-    <header class="header">
-      <div class="header__inner hero-container">
-        <img width="200" height="50" srcset="
+<!--HERO-->
+<section class="hero">
+  <!--HEADER--->
+  <header class="header">
+    <div class="header__inner hero-container">
+      <img width="200" height="50" srcset="
               ./images/hero-header/logo.png 200w,
               ./images/hero-header/logo400.png 400w
             " src="./images/hero-header/logo.png" alt="logo" />
-        <nav>
-          <ul class="header__nav">
-            <li><a href="#">Home</a></li>
-            <li><a href="./partials/customer-reviews.html">About us</a></li>
-            <li><a href="./partials/about-how-its-made.html">How it's made?</a></li>
-            <li><a href="./partials/products.html">Our products</a></li>
-            <li><a href="./partials/contacts-locations.html">Contact</a></li>
-          </ul>
-        </nav>
-        <button class="button--nav js-open-menu">
-          <svg class="nav--icon">
-            <use href="./images/hero-header/symbol.svg#icon-nav-button"></use>
-          </svg>
-        </button>
-        <button class="header__button" data-modal-open>
-          Buy now
-          <svg class="header__button__icon">
-            <use href="./images/hero-header/symbol.svg#icon-arrow"></use>
-          </svg>
-        </button>
-      </div>
-    </header>
-
-    <!--HERO-->
-    <div class="hero__inner hero-container">
-      <div class="hero__inner--left">
-        <h1 class="hero__title">
-          ice cream made with
-          <span class="hero__title--span">passion</span>
-        </h1>
-        <ul class="hero__inner__list">
-          <li><button class="button--red">
-              <a href="#">Products</a></button></li>
-          <li>
-            <button class="button--white">How it's made?</button>
-          </li>
+      <nav>
+        <ul class="header__nav">
+          <li><a href="#">Home</a></li>
+          <li><a href="./partials/customer-reviews.html">About us</a></li>
+          <li><a href="./partials/about-how-its-made.html">How it's made?</a></li>
+          <li><a href="./partials/products.html">Our products</a></li>
+          <li><a href="./partials/contacts-locations.html">Contact</a></li>
         </ul>
-        <div class="hero__inner--left--div">
-          <div class="hero__inner--left--img"></div>
-          <div>
-            <p class="hero__inner--text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et
-            </p>
-            <a class="hero__inner--link">
-              <svg class="hero__inner--icon">
-                <use href="./images/hero-header/symbol.svg#icon-vector"></use>
-              </svg>
-            </a>
-          </div>
+      </nav>
+      <button class="button--nav js-open-menu">
+        <svg class="nav--icon">
+          <use href="./images/hero-header/symbol.svg#icon-nav-button"></use>
+        </svg>
+      </button>
+      <button class="header__button" data-modal-open>
+        Buy now
+        <svg class="header__button__icon">
+          <use href="./images/hero-header/symbol.svg#icon-arrow"></use>
+        </svg>
+      </button>
+    </div>
+  </header>
+
+  <!--HERO-->
+  <div class="hero__inner hero-container">
+    <div class="hero__inner--left">
+      <h1 class="hero__title">
+        ice cream made with
+        <span class="hero__title--span">passion</span>
+      </h1>
+      <ul class="hero__inner__list">
+        <li><button class="button--red">
+            <a href="#">Products</a></button></li>
+        <li>
+          <button class="button--white">How it's made?</button>
+        </li>
+      </ul>
+      <div class="hero__inner--left--div">
+        <div class="hero__inner--left--img"></div>
+        <div>
+          <p class="hero__inner--text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et
+          </p>
+          <a class="hero__inner--link">
+            <svg class="hero__inner--icon">
+              <use href="./images/hero-header/symbol.svg#icon-vector"></use>
+            </svg>
+          </a>
         </div>
-      </div>
-      <!--Circle and photo-->
-      <div class="hero__circle"></div>
-      <div class="hero__photo"></div>
-      <!--End of circle and photo div-->
-      <div class="hero__inner--right">
-        <div class="hero__inner--right--div">
-          <div class="hero__circle--small"></div>
-          <p class="hero__inner--number">16</p>
-          <p class="hero__inner--fresh">cafes</p>
-        </div>
-        <div class="hero__inner--right--div">
-          <div class="hero__circle--small"></div>
-          <p class="hero__inner--number">23</p>
-          <p class="hero__inner--fresh">food trucks</p>
-        </div>
-        <div class="hero__right--image"></div>
       </div>
     </div>
-  </section>
+    <!--Circle and photo-->
+    <div class="hero__circle"></div>
+    <div class="hero__photo"></div>
+    <!--End of circle and photo div-->
+    <div class="hero__inner--right">
+      <div class="hero__inner--right--div">
+        <div class="hero__circle--small"></div>
+        <p class="hero__inner--number">16</p>
+        <p class="hero__inner--fresh">cafes</p>
+      </div>
+      <div class="hero__inner--right--div">
+        <div class="hero__circle--small"></div>
+        <p class="hero__inner--number">23</p>
+        <p class="hero__inner--fresh">food trucks</p>
+      </div>
+      <div class="hero__right--image"></div>
+    </div>
 
-
-  <div class="menu-container js-menu-container" id="mobile-menu">
-    <button class="js-close-menu close-menu">
-      <svg viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
-        <path
-          d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-          clip-rule="evenodd"></path>
-      </svg>
-    </button>
-
-    <ul class="mobile-menu">
-      <li class="mobile-menu__item">
-        <button class="mobile-menu__button" data-modal-open>
-          Buy now
-          <svg class="header__button__icon">
-            <use href="./images/hero-header/symbol.svg#icon-arrow"></use>
-          </svg>
-        </button>
-      </li>
-      <li class="mobile-menu__item">
-        <a class="link" href="#">Home</a>
-      </li>
-      <li class="mobile-menu__item">
-        <a class="link" href="#">About us</a>
-      </li>
-      <li class="mobile-menu__item">
-        <a class="link" href="#">How it's made?</a>
-      </li>
-      <li class="mobile-menu__item">
-        <a class="link" href="#">Our products</a>
-      </li>
-      <li class="mobile-menu__item">
-        <a class="link" href="#">Contact</a>
-      </li>
-    </ul>
+    <!--MODAL-->
   </div>
+  <div class="modal is-hidden" data-modal>
+    <div class="inner-order-form">
+      <button class="close-modal" data-modal-close>
+        <svg class="close-modal--svg">
+          <use href="./images/hero-header/symbol.svg#close-btn"></use>
+        </svg>
+      </button>
+      <form>
+        <h2 class="form-title">Super duper</h2>
+        <div class="items-order">
+          <h3 class="items-order__title">Ice Cream</h3>
+          <div class="form-products">
+            <div class="form-products__item">
+              <img srcset="
+                            ./images/hero-header/prod1-320-min.png 350w,
+                            ./images/hero-header/prod1-768-min.png 768w
+                          " sizes="10vw" src="./images/hero-header/prod1-320-min.png" alt="" />
+              <label class="product-order">
+                <input type="text" placeholder="How many?" />
+              </label>
+            </div>
+            <div class="form-products__item">
+              <img srcset="
+                            ./images/hero-header/prod2-320-min.png 350w,
+                            ./images/hero-header/prod2-768-min.png 768w
+                          " sizes="10vw" src="./images/hero-header/prod2-320-min.png" alt="" />
+              <label class="product-order">
+                <input class="product-order__item" type="text" placeholder="How many?" />
+              </label>
+            </div>
+            <div class="form-products__item">
+              <img srcset="
+                            ./images/hero-header/prod3-320-min.png 350w,
+                            ./images/hero-header/prod3-768-min.png 768w
+                          " sizes="10vw" src="./images/hero-header/prod3-320-min.png" alt="" />
+              <label class="product-order">
+                <input type="text" placeholder="How many?" />
+              </label>
+            </div>
+          </div>
+        </div>
+        <div class="delivery-info">
+          <h3 class="items-order__title">delivery details</h3>
+          <label class="modal-form__label">
+            Name
+            <span class="input-container">
+              <svg class="modal-form__icon">
+                <use href="./images/hero-header/symbol.svg#icon-person-form"></use>
+              </svg>
+              <input type="text" name="name" class="modal-form__input" placeholder="Enter your name" />
+            </span>
+          </label>
+          <label class="modal-form__label">
+            Telephone
+            <span class="input-container">
+              <svg class="modal-form__icon">
+                <use href="./images/hero-header/symbol.svg#icon-phone-form"></use>
+              </svg>
+              <input type="tel" name="phone" placeholder="Enter your phone number" class="modal-form__input" />
+            </span>
+          </label>
+          <label class="modal-form__label">
+            E-mail
+            <span class="input-container">
+              <svg class="modal-form__icon">
+                <use href="./images/hero-header/symbol.svg#icon-mail-form"></use>
+              </svg>
+              <input type="email" placeholder="Enter your e-mail" name="email" class="modal-form__input" />
+            </span>
+          </label>
+          <label class="modal-form__label">
+            Delivery Address
+            <span class="input-container">
+              <svg class="modal-form__icon">
+                <use href="./images/hero-header/symbol.svg#icon-house-svg"></use>
+              </svg>
+              <input type="text" placeholder="Enter delivery address" name="delivery-address"
+                class="modal-form__input" />
+            </span>
+          </label>
+        </div>
+        <button type="submit" class="submit-form-button">Place Order</button>
+      </form>
+    </div>
+  </div>
+</section>
 
-  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
-    integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
-    crossorigin="anonymous"></script>
-  <script defer src="./js/heroMobileMenu.js"></script>
+
+<div class="menu-container js-menu-container" id="mobile-menu">
+  <button class="js-close-menu close-menu">
+    <svg viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+      <path
+        d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+        clip-rule="evenodd"></path>
+    </svg>
+  </button>
+
+  <ul class="mobile-menu">
+    <li class="mobile-menu__item">
+      <button class="mobile-menu__button" data-modal-open>
+        Buy now
+        <svg class="header__button__icon">
+          <use href="./images/hero-header/symbol.svg#icon-arrow"></use>
+        </svg>
+      </button>
+    </li>
+    <li class="mobile-menu__item">
+      <a class="link" href="#">Home</a>
+    </li>
+    <li class="mobile-menu__item">
+      <a class="link" href="#">About us</a>
+    </li>
+    <li class="mobile-menu__item">
+      <a class="link" href="#">How it's made?</a>
+    </li>
+    <li class="mobile-menu__item">
+      <a class="link" href="#">Our products</a>
+    </li>
+    <li class="mobile-menu__item">
+      <a class="link" href="#">Contact</a>
+    </li>
+  </ul>
+</div>
+
+<script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+  integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+  crossorigin="anonymous"></script>
+<script defer src="./js/heroMobileMenu.js"></script>
+<script src="./js/heroModal.js"></script>
 
 </article>
