--- a/src/sass/components/_customer-rev-section.scss
+++ b/src/sass/components/_customer-rev-section.scss
@@ -1,6 +1,5 @@
 @import 'src/sass/utils/_vars.scss';
 
-   
 .customer-review {
   &__container {
     display: flex;
@@ -34,19 +33,18 @@
     padding: 15px 35px 8px 37px;
     color: $blackColor;
     z-index: 1;
-    
 
     &::before {
-      content: "";
-    height: 19%;
-    width: 25%;
-    z-index: -1;
-    background-image: url(../images/quotes.svg);
-    background-repeat: no-repeat;
-    position: absolute;
-    top: 0;
-    left: 10%;
-     }
+      content: '';
+      height: 19%;
+      width: 25%;
+      z-index: -1;
+      background-image: url(../images/quotes.svg);
+      background-repeat: no-repeat;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
   }
 
   &__name-place {
@@ -66,28 +64,31 @@
       right: 45%;
     }
   }
-
-  &__photo {
-    transition: transform 0.3s;
-    &:hover,
-    &:focus {
-      transform: scale(1.25);
-    }
-  }
 }
 
 .customer-reviews__line {
   background-image: repeating-linear-gradient(#e1e1e1 0 1px, #fafafa 0 30px);
   position: absolute;
-  
   top: 74px;
-    left: 22%;
-    width: 51%;
-    height: 72%;
-
+  left: 20%;
+  width: 57%;
+  height: 72%;
 }
 
 @media screen and (min-width: 768px) {
+  .customer-review__rev-container {
+    width: 100%; }
+  
+  .customer-reviews__line {
+    width: 75%;
+    height: 50%;
+    left: 12%;
+  }
+
+  .customer-review__review:before {
+    height: 35%;
+    left: 2%;
+  }
 }
 @media screen and (min-width: 1280px) {
   .customer-rev {
@@ -101,54 +102,31 @@
       gap: 24px;
       width: 100%;
     }
+
     &__rev-container {
-      padding: 32px 74px 31px 72px;
-      background: #fafafa;
-      position: relative;
       box-shadow: none;
       transition: box-shadow 150ms $main-transition-timing-function;
+      width: 100%;
       &:hover,
       &:focus {
         box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
       }
     }
     &__review {
-      font-weight: 500;
       font-size: 16px;
       line-height: 186%;
-      text-align: center;
-      letter-spacing: 0.04em;
-      position: relative;
-      padding: 15px 35px 8px 37px;
-      color: $blackColor;
-      z-index: 1;
 
       &::before {
-        position: absolute;
-        content: '';
         left: 0;
         top: 0;
-        background-image: url(../images/quotes.svg);
         height: 40px;
         width: 54px;
-        z-index: -1;
-      }
+         }
     }
 
     &__name-place {
-      font-weight: 500;
-      font-size: 20px;
-      line-height: 186%;
-      text-align: center;
-      color: $blackColor;
-      position: relative;
-
       &::before {
         content: '. . .';
-        color: #c7133e;
-        font-size: 40px;
-        position: absolute;
-        bottom: 48px;
         right: 48%;
       }
     }
@@ -166,8 +144,74 @@
     width: 84%;
     height: 42%;
     background-image: repeating-linear-gradient(#e1e1e1 0 1px, #fafafa 0 31px);
-    position: absolute;
     top: 77px;
     left: 8%;
   }
 }
+
+//   .slider-wrapper {
+//     margin: 1rem;
+//     position: relative;
+//     overflow: hidden;
+//   }
+
+// .slides-container {
+//   height: calc(100vh - 2rem);
+//   width: 100%;
+//   display: flex;
+//   overflow: scroll;
+//   scroll-behavior: smooth;
+//   list-style: none;
+//   margin: 0;
+//   padding: 0;
+//   transition: all .15s cubic-bezier(.07,.95,0,1);
+// }
+
+//   .slide-arrow {
+//     position: absolute;
+//     display: flex;
+//     top: 0;
+//     bottom: 0;
+//     margin: auto;
+//     height: 4rem;
+//     background-color: white;
+//     border: none;
+//     width: 2rem;
+//     font-size: 3rem;
+//     padding: 0;
+//     cursor: pointer;
+//     opacity: 2;
+//     transition: opacity 100ms;
+//   }
+
+//   .slide-arrow:hover,
+//   .slide-arrow:focus {
+//     opacity: 1;
+//   }
+
+// #slide-arrow-prev {
+//   left: 0;
+//   padding-left: 0.25rem;
+//   border-radius: 0 2rem 2rem 0;
+// }
+
+// #slide-arrow-next {
+//   right: 0;
+//   padding-left: 0.75rem;
+//   border-radius: 2rem 0 0 2rem;
+// }
+
+//   .slide {
+//     width: 20%;
+//     height: 50%;
+//     flex: 1 0 100%;
+//     transition: all .15s cubic-bezier(.07,.95,0,1);
+// }
+
+//   .slide:nth-child(1) {
+//     opacity:1;
+//   }
+
+//   .slide:nth-child(2) {
+//     opacity:1;
+//   }
