modificat comentariu text

--- a/src/partials/gallery-section.html
+++ b/src/partials/gallery-section.html
@@ -1,4 +1,4 @@
-<!-- <section class="gallery">
+<section class="gallery">
     <div class="gallery__grid">
         <div>
             <picture>
@@ -83,4 +83,4 @@
             </picture>                
         </div>
     </div>
-</section> -->
+</section>
