--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -1,159 +1,159 @@
-// @import 'src/sass/utils/_vars.scss';
+@import 'src/sass/utils/_vars.scss';
 
-// .mobile-menu {
-//   position: fixed;
-//   top: 0;
-//   right: 0;
-//   transform: translateX(100%);
-//   width: 100vw;
-//   min-height: 100vh;
-//   padding-top: 60px;
-//   background-color: $thirdColor;
-//   z-index: 100;
-//   opacity: 0.3;
-//   visibility: hidden;
-//   pointer-events: none;
-//   transition: opacity 250ms $main-transition-timing-function,
-//     visibility 250ms $main-transition-timing-function,
-//     transform 250ms $main-transition-timing-function;
-// }
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  right: 0;
+  transform: translateX(100%);
+  width: 100vw;
+  min-height: 100vh;
+  padding-top: 60px;
+  background-color: $thirdColor;
+  z-index: 100;
+  opacity: 0.3;
+  visibility: hidden;
+  pointer-events: none;
+  transition: opacity 250ms $main-transition-timing-function,
+    visibility 250ms $main-transition-timing-function,
+    transform 250ms $main-transition-timing-function;
+}
 
-// .mobile-menu.is-open {
-//   opacity: 1;
-//   visibility: visible;
-//   pointer-events: auto;
-//   z-index: 300;
-//   transform: translateX(0);
-// }
+.mobile-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+  z-index: 300;
+  transform: translateX(0);
+}
 
-// .mobile-menu__btn--open {
-//   display: block;
-//   width: 50px;
-//   height: 50px;
-//   border-radius: 50%;
-//   background-color: $thirdColor;
+.mobile-menu__btn--open {
+  display: block;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: $thirdColor;
 
-//   text-align: center;
-//   margin-right: auto;
-//   margin-left: auto;
-//   margin-bottom: 12px;
-// }
+  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 12px;
+}
 
-// .mobile-menu__btn {
-//   display: block;
-//   width: 209px;
-//   height: 44px;
-//   border-radius: 22px;
-//   background-color: var(--text-color-theme-dark);
+.mobile-menu__btn {
+  display: block;
+  width: 209px;
+  height: 44px;
+  border-radius: 22px;
+  background-color: var(--text-color-theme-dark);
 
-//   text-align: center;
-//   margin-right: auto;
-//   margin-left: auto;
-//   margin-bottom: 12px;
+  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 12px;
 
-//   color: var(--primary-accent-color);
+  color: var(--primary-accent-color);
 
-//   transition: background-color 250ms $main-transition-timing-function;
+  transition: background-color 250ms $main-transition-timing-function;
 
-//   &:hover,
-//   &:focus {
-//     background-color: #ecebeb;
-//     animation: shake-horizontal 0.8s cubic-bezier(0.455, 0.03, 0.515, 0.955)
-//       both;
-//   }
-// }
+  &:hover,
+  &:focus {
+    background-color: #ecebeb;
+    animation: shake-horizontal 0.8s cubic-bezier(0.455, 0.03, 0.515, 0.955)
+      both;
+  }
+}
 
-// .mobile-menu__btn--svg {
-//   width: 9px;
-//   height: 9px;
-//   margin-left: 24px;
-//   stroke: var(--primary-accent-color);
-//   stroke-width: 2px;
-//   fill: transparent;
+.mobile-menu__btn--svg {
+  width: 9px;
+  height: 9px;
+  margin-left: 24px;
+  stroke: var(--primary-accent-color);
+  stroke-width: 2px;
+  fill: transparent;
 
-//   transform: scale(1);
+  transform: scale(1);
 
-//   transition: transform 250ms $main-transition-timing-function;
+  transition: transform 250ms $main-transition-timing-function;
 
-//   .mobile-menu__btn:hover & {
-//     transform: scale(1.1);
-//   }
-// }
+  .mobile-menu__btn:hover & {
+    transform: scale(1.1);
+  }
+}
 
-// .mobile-menu__list {
-//   width: 100%;
-// }
+.mobile-menu__list {
+  width: 100%;
+}
 
-// .mobile-menu__item {
-//   border-bottom: 1px solid #e18298;
+.mobile-menu__item {
+  border-bottom: 1px solid #e18298;
 
-//   &:nth-child(1) {
-//     border-top: 1px solid #e18298;
-//   }
-// }
+  &:nth-child(1) {
+    border-top: 1px solid #e18298;
+  }
+}
 
-// .mobile-menu__link {
-//   text-decoration: none;
+.mobile-menu__link {
+  text-decoration: none;
 
-//   color: var(--text-color-theme-dark);
-//   display: block;
-//   padding-left: 20px;
-//   padding-top: 11px;
-//   padding-bottom: 11px;
+  color: var(--text-color-theme-dark);
+  display: block;
+  padding-left: 20px;
+  padding-top: 11px;
+  padding-bottom: 11px;
 
-//   transition: color 250ms $main-transition-timing-function;
+  transition: color 250ms $main-transition-timing-function;
 
-//   &.mobile-menu__link--current {
-//     color: var(--primary-accent-color);
-//   }
+  &.mobile-menu__link--current {
+    color: var(--primary-accent-color);
+  }
 
-//   &:hover,
-//   &:focus {
-//     color: var(--primary-accent-color);
-//   }
-// }
+  &:hover,
+  &:focus {
+    color: var(--primary-accent-color);
+  }
+}
 
-// .close__btn {
-//   position: absolute;
-//   top: 20px;
-//   right: 20px;
-//   width: 20px;
-//   height: 20px;
-//   border-radius: 50%;
-//   transform: rotate(90deg);
+.close__btn {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  transform: rotate(90deg);
 
-//   transition: background-color 250ms $main-transition-timing-function,
-//     transform 250ms $main-transition-timing-function;
+  transition: background-color 250ms $main-transition-timing-function,
+    transform 250ms $main-transition-timing-function;
 
-//   &:hover,
-//   &:focus {
-//     background-color: #e18298;
-//     transform: rotate(-90deg);
-//   }
-// }
+  &:hover,
+  &:focus {
+    background-color: #e18298;
+    transform: rotate(-90deg);
+  }
+}
 
-// .close__btn--svg {
-//   width: 14px;
-//   height: 14px;
-//   stroke: var(--text-color-theme-dark);
-//   stroke-width: 2px;
+.close__btn--svg {
+  width: 14px;
+  height: 14px;
+  stroke: var(--text-color-theme-dark);
+  stroke-width: 2px;
 
-//   transition: stroke 250ms var(--primary-cubic-bezier);
+  transition: stroke 250ms var(--primary-cubic-bezier);
 
-//   .close__btn:hover &,
-//   .close__btn:focus & {
-//     stroke: var(--primary-accent-color);
-//   }
-// }
+  .close__btn:hover &,
+  .close__btn:focus & {
+    stroke: var(--primary-accent-color);
+  }
+}
 
-// @media screen and (min-width: 768px) {
-//   .mobile-menu {
-//     width: 40%;
-//   }
-// }
+@media screen and (min-width: 768px) {
+  .mobile-menu {
+    width: 40%;
+  }
+}
 
-// @media screen and (min-width: 1280px) {
-//   .mobile-menu {
-//     display: none;
-//   }
-// }
+@media screen and (min-width: 1280px) {
+  .mobile-menu {
+    display: none;
+  }
+}
