--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -94,7 +94,7 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et
           </p>
-          <p id="myDIV" >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae, voluptates?</p>
+          <p id="left-list__text2" >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae, voluptates?</p>
           
           <img
             src="./images/header-arrow-right-D.jpg"
