--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -121,6 +121,10 @@ p {
   display: none;
 }
 
+.menu {
+  display: none;
+}
+
 .ice-cream-container {
   width: 171px;
   height: 410px;
@@ -148,18 +152,6 @@ p {
     transform: scale(1.1);
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 1000ms;
-  }
-}
-
-@media (max-width: 1279px) {
-  .menu {
-    display: none;
-  }
-}
-
-@media (min-width: 1280px) {
-  .menu-toggle {
-    display: none;
   }
 }
 
@@ -248,6 +240,7 @@ p {
   width: 100%;
   height: 100%;
   position: absolute;
+  top: 1px;
   z-index: 1111;
   transition: opacity 1000ms ease;
 
@@ -255,7 +248,7 @@ p {
     position: absolute;
     width: 300px;
     height: 581px;
-    top: 50%;
+    top: 85%;
     left: 50%;
     transform: translate(-50%, -100%);
     z-index: 30;
@@ -498,10 +491,10 @@ p {
     }
   }
 
-  #myDIV {
-    width: 200px;
-    font-size: 14px;
-    line-height: 1.42;
+  #left-list__text2 {
+    width: 114px;
+    font-size: 8px;
+    line-height: 1.5;
     color: $white-color;
     display: none;
   }
@@ -534,6 +527,7 @@ p {
   }
   .modal {
     &__request-services {
+      top: 65%;
       width: 450px;
       height: 581px;
     }
@@ -553,6 +547,12 @@ p {
   .container {
     max-width: 1280px;
     height: 664px;
+  }
+  .menu {
+    display: inline-block;
+  }
+  .menu-toggle {
+    display: none;
   }
 
   .nav {
@@ -645,6 +645,12 @@ p {
       height: 26px;
     }
   }
+  #left-list__text2 {
+    width: 200px;
+    font-size: 14px;
+    line-height: 1.42;
+  }
+
   .modal {
     &__request-services {
       width: 528px;
