--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -174,7 +174,7 @@ body {
   text-transform: uppercase;
   margin: 0px auto;
   position: relative;
-  background-color: #FFF5F6;
+  background-color: #fff5f6;
 }
 .made__subtitle {
   font-family: "Titan One";
@@ -192,8 +192,8 @@ body {
 }
 
 .made-section {
-  background: url(../images/made-background.png);
-  background-repeat: no-repeat;
+  background-image: none;
+  background-color: #fff5f6;
   font-family: "DM Sans";
   font-style: normal;
   display: flex;
@@ -246,6 +246,7 @@ body {
 .container {
   width: 1200px;
   margin: 0px auto;
+  background-color: #fff5f6;
 }
 
 .quantity__list {
@@ -286,4 +287,16 @@ body {
   line-height: 28px;
   letter-spacing: 0.02em;
   color: #000000;
+}
+
+@media screen and (min-width: 768px) {
+  .made-section__image {
+    background-image: none;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .made-section {
+    background: url(../images/made-background.png);
+    background-repeat: no-repeat;
+  }
 }/*# sourceMappingURL=main.css.map */
