--- a/src/sass/components/_common.scss
+++ b/src/sass/components/_common.scss
@@ -24,8 +24,8 @@ body {
   border-radius: 50%;
   border-style: none;
   background-color: $whiteColor;
+  transition: background-color 150ms $main-transition-timing-function;
 }
-
 
 .arrow-button__svg {
   fill: #d41443;
