--- a/src/sass/components/_products-section.scss
+++ b/src/sass/components/_products-section.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   padding-top: 60px;
+  padding-bottom: 60px;
 }
 .products {
   padding-left: 20px;
@@ -16,6 +17,11 @@
     letter-spacing: 0.04em;
     text-transform: uppercase;
     color: $secondaryColor;
+    transition: transform 0.3s;
+    &:hover,
+    &:focus {
+      transform: scale(1.25);
+    }
   }
   &__title {
     font-family: $secondFamily;
@@ -26,6 +32,11 @@
     text-transform: uppercase;
     color: $primaryColor;
     margin-bottom: 148px;
+    transition: transform, 0.3s;
+    &:hover,
+    &:focus {
+      transform: scale(1.25);
+    }
   }
   &__list {
     display: flex;
@@ -38,6 +49,11 @@
     position: relative;
     margin-bottom: 140px;
     width: 76%;
+    transition: transform 0.3s;
+    &:hover,
+    &:focus {
+      transform: scale(1.05);
+    }
     &::before {
       content: '';
       display: block;
@@ -76,6 +92,13 @@
       background-image: url(/src/images/milkshakes-m.png);
     }
   }
+  .arrow-button:hover {
+    background-color: $primaryColor;
+    cursor: pointer;
+    & svg {
+      fill: $whiteColor;
+    }
+  }
 }
 @media screen and (min-device-pixel-ratio: 2),
   screen and (min-resolution: 192dpi),
@@ -107,6 +130,11 @@
   align-items: center;
   gap: 32px;
   padding: 160px 40px 40px;
+  transition: transform 0.3s;
+  &:hover,
+  &:focus {
+    transform: scale(1.05);
+  }
 
   &__subtitle {
     font-family: $secondFamily;
