feature-gallery-done

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -110,13 +110,11 @@
                   <img src="images/img-testimonials1.png" alt="" />
             </picture>
             <article class="testimonials">
-
                   <svg class="testimonials__svg" width="54" height="40">
-                        <use href="./images/icons.svg#icon-untitled"></use>
+                        <use href="./images/icons-gallery.svg#icon-untitled"></use>
                   </svg>
                   <div class="repeted-line"></div>
                   <p class="testimonials__text">
-
                         Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit
                         nulla
                         quam
@@ -134,19 +132,19 @@
                   <label class="radio-button__container">
                         <input class="radio-button__container__input" type="radio" checked="checked" name="radio">
                         <span class="checkmark"><svg class="checkmark__svg">
-                                    <use href="./images/icons.svg#icon-Vector-6"></use>
+                                    <use href="./images/icons-gallery.svg#icon-Vector-6"></use>
                               </svg></span>
                   </label>
                   <label class="radio-button__container">
                         <input class="radio-button__container__input" type="radio" name="radio">
                         <span class="checkmark"><svg class="checkmark__svg">
-                                    <use href="./images/icons.svg#icon-Vector-6"></use>
+                                    <use href="./images/icons-gallery.svg#icon-Vector-6"></use>
                               </svg></span>
                   </label>
                   <label class="radio-button__container">
                         <input class="radio-button__container__input" type="radio" name="radio">
                         <span class="checkmark"><svg class="checkmark__svg">
-                                    <use href="./images/icons.svg#icon-Vector-6"></use>
+                                    <use href="./images/icons-gallery.svg#icon-Vector-6"></use>
                               </svg></span>
                   </label>
             </form>
