--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,8 +1,14 @@
-h3 {
+h3,
+p {
   margin: 0px;
+}
+* {
+  margin-block-start: 0px;
+  margin-block-end: 0px;
 }
 img {
   background-size: cover;
+  margin: 0px;
 }
 .gallery {
   display: flex;
@@ -10,10 +16,8 @@ img {
   gap: 60px;
   justify-content: center;
   align-items: center;
-  max-width: 320px;
   background-color: white;
   padding-bottom: 240px;
-  margin: 0 auto;
 }
 
 .gallery-container {
@@ -55,16 +59,18 @@ img {
     border-radius: 50%;
     background-color: red;
   }
+  &__picture {
+    margin-bottom: 16px;
+  }
 }
 .testimonials {
   background-color: #fafafa;
-  position: relative;
   display: flex;
+  position: relative;
   flex-direction: column;
-  padding: 43px 58px 10px 65px;
+  padding: 43px 58px 26px 65px;
 
   &__text {
-    table-layout: auto;
     z-index: 1;
     font-weight: 500;
     font-size: 12px;
@@ -77,15 +83,16 @@ img {
   &__svg {
     position: absolute;
     left: 54px;
+    top: 30px;
   }
 }
 
 .repeted-line {
   width: 65%;
-  height: 75%;
-  background-image: repeating-linear-gradient(#e1e1e1 0 1px, #0000 0 31px);
+  height: 69%;
+  background-image: repeating-linear-gradient(#e1e1e1 0 1px, #0000 0 30px);
   position: absolute;
-  top: 82px;
+  top: 74px;
   left: 48px;
 }
 
@@ -130,6 +137,87 @@ img {
 }
 
 @media screen and (min-width: 768px) {
+  .gallery-container {
+    gap: 6.07px;
+    &__box {
+      gap: 4.54px;
+    }
+  }
+  .testimonials-container {
+    gap: 0px;
+
+    &__picture {
+      margin-bottom: 20px;
+    }
+    &__dot {
+      margin-bottom: 16px;
+    }
+    &__person {
+      margin-bottom: 32px;
+    }
+  }
+  .testimonials {
+    background: rgba(250, 250, 250, 0.4);
+    margin-bottom: 4px;
+    padding: 37px 55.18px 44px 50.71px;
+    &__text {
+      width: 514.12px;
+      font-size: 14px;
+      line-height: 216%;
+      text-align: center;
+      letter-spacing: 0.04em;
+    }
+    &__svg {
+      left: 4px;
+      top: 27px;
+    }
+  }
+  .repeted-line {
+    width: 98%;
+    height: 36%;
+    top: 67px;
+    left: 5px;
+  }
 }
 @media screen and (min-width: 1280px) {
+  .gallery {
+    gap: 120px;
+  }
+  .gallery-container {
+    gap: 8px;
+    &__box {
+      gap: 7.98px;
+    }
+  }
+  .testimonials-container {
+    gap: 16px;
+    &__picture {
+      margin: 0px;
+    }
+    &__person {
+      margin-bottom: 16px;
+    }
+  }
+  .testimonials {
+    background: #fafafa;
+    padding: 47px 109px 39px 109px;
+    &__text {
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 186%;
+      text-align: center;
+      letter-spacing: 0.04em;
+      width: 750px;
+    }
+    &__svg {
+      top: 35px;
+      left: 70px;
+    }
+  }
+  .repeted-line {
+    width: 86%;
+    height: 27%;
+    top: 77px;
+    left: 65px;
+  }
 }
