--- a/src/sass/components/_advantages-section.scss
+++ b/src/sass/components/_advantages-section.scss
@@ -2,13 +2,10 @@
 @import 'src/sass/utils/_vars.scss';
 
 .advantages {
-  padding-top: 40px;
-  padding-bottom: 60px;
+  padding: 40px 0 60px 20px;
   background: $secondBackgroundColor;
 }
-.list {
-  list-style: none;
-}
+
 .advantages__item {
   width: 230px;
   &:not(:last-child) {
@@ -50,8 +47,7 @@
 }
 
 .advantages__text {
-  font-family: 'DM Sans';
-  font-style: normal;
+  
   font-weight: 700;
   font-size: 12px;
   line-height: 20px;
@@ -74,8 +70,8 @@
 
 @media screen and (min-width: 768px) {
   .advantages {
-    padding-top: 60px;
-    padding-bottom: 64px;
+    padding: 60px 0 64px 32px;
+  
   }
 
   .advantages__list {
