--- a/src/sass/components/_galery-section.scss
+++ b/src/sass/components/_galery-section.scss
@@ -1,7 +1,7 @@
 @import 'src/sass/utils/_vars.scss';
 
 .gallery {
-    background-image: linear-gradient(to top,#E5E5E5 80%, $secondBackgroundColor 30%);
+    background-image: linear-gradient(to top,$whiteColor 80%, $secondBackgroundColor 30%);
     padding-bottom: 60px; 
 }
 
@@ -21,6 +21,7 @@
     flex-direction: column;
     overflow: hidden;
     margin-right: 3px;
+    transition: transform 0.3s;
 }
 .gallery__second-item {
     padding-top: 45px;
@@ -32,7 +33,7 @@
 
 .gallery__grid picture:hover,
 .gallery__grid picture:focus {
-    scale: 1.4;
+    transform: scale(1.1);
 }
 
 @media screen and (min-width: 768px) {
