--- a/src/partials/advantages-section.html
+++ b/src/partials/advantages-section.html
@@ -1,8 +1,12 @@
-<section class="advantages">
+<!-- advantages-section -->
+<section class="advantages"> 
+  <!-- adavantages -->
   <div class="advantages__container container">
     <h2 hidden class="advantages__title">Advantages</h2>
-    <ul class="advantages__list list">
+    <ul class="advantages__list unstyled-list">
+      <!-- advantages__list-item si urmatorul este modificator advantages__list-item--mod1-->
       <li class="advantages__item advantages__1-item">
+        <!-- adavantages__list-text -->
         <p class="advantages__text">
           <span class="advantages__number">721</span>
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
