--- a/src/sass/components/_common.scss
+++ b/src/sass/components/_common.scss
@@ -6,6 +6,7 @@
   margin-block-end: 0px;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
+  padding-inline-start: 0;
 }
 
 body {
@@ -33,7 +34,6 @@ body {
 
 .unstyled-list {
   list-style: none;
-  padding-inline-start: 0px;
   padding-left: 0;
 }
 
