--- a/src/sass/components/_galery-section.scss
+++ b/src/sass/components/_galery-section.scss
@@ -1,18 +1,22 @@
 @import 'src/sass/utils/_vars.scss';
 
 .gallery {
-    background-image: linear-gradient(to top,#E5E5E5 80%, $secondBackgroundColor 30%);
-    padding-bottom: 60px; 
+    background-image: linear-gradient(to top,#E5E5E5 63%, $secondBackgroundColor 35%);
+    padding: 60px 0px; 
+}
+
+.gallery__container {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    height: 100%;
 }
 
 .gallery__grid {
     display: flex;
     align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    margin-left: 0px;
-    margin-right: 0px; 
+    justify-content:center;
+    min-width: 320px;
 }
 
 .gallery__grid picture {
@@ -20,40 +24,57 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    margin-right: 3px;
+    display: block;
+    // max-width: 100%;
+    height: auto;
+    padding-right: 3px;
+    mix-blend-mode:multiply;
+    &:hover img,
+    &:focus img {
+        box-shadow: 0px 8px 30px rgba(250, 250, 250, 0.673);    
+        cursor: pointer;
+        transform: scale(1.3) translateX(10px); 
+    }
 }
+
 .gallery__second-item {
-    padding-top: 45px;
+    padding-top: 30px;
 }
 
 .gallery__fourth-item {
-    padding-top: 60px;
-}
-
-.gallery__grid picture:hover,
-.gallery__grid picture:focus {
-    scale: 1.4;
+    padding-top: 45px;
 }
 
 @media screen and (min-width: 768px) {
     .gallery{
+        background-image: linear-gradient(to top,#E5E5E5 50%, $secondBackgroundColor 50%);
         padding-bottom: 60px; 
     }
-    
     .gallery__grid picture {
         border-radius: 20px;
-        margin: 0px 6px 6px 0px;
+        padding: 0px 6px 6px 0px;
+    }
+    .gallery__second-item {
+        padding-top: 30px;
+    }
+    .gallery__fourth-item {
+        padding-top: 50px;
     }
 }
 
 @media screen and (min-width: 1280px) {
     .gallery {
+        background-image: linear-gradient(to top,#E5E5E5 70%, $secondBackgroundColor 20%);
         padding-bottom: 120px;
     }
-    
     .gallery__grid picture {
         border-radius: 20px;
-        margin: 0px 8px 8px 0px;
+        padding: 0px 8px 8px 0px;
     } 
+    .gallery__second-item {
+        padding-top: 30px;
+    }
+    .gallery__fourth-item {
+        padding-top: 50px;
+    }
 }
-
