variables used & desktop size readjusted

--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -24,17 +24,17 @@
 }
 
 .p-titles__paragraph {
-  font-weight: var(--font-weight-400);
-  color: #ffa5ba;
+  font-weight: $font-weight-400;
+  color: $secondary-color;
   font-family: 'Titan One';
-  font-size: 30px;
+  font-size: $font-size-30;
   line-height: 34px;
   letter-spacing: 0.04em;
   text-transform: uppercase;
   margin-bottom: -16px;
 
   // For tablets
-  @media only screen and (min-width: 768px) and (max-width: 1024px) {
+  @media only screen and (min-width: 768px) and (max-width: 1279px) {
     font-size: 26px;
     line-height: 30px;
   }
@@ -49,16 +49,16 @@
 .p-titles__heading {
   font-family: 'Titan One';
   font-weight: var(--font-weight-400);
-  font-size: 58px;
+  font-size: $font-size-58;
   line-height: 66px;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  color: #d41443;
+  color: $primary-color;
   margin-bottom: -20px;
 
   // For tablets
-  @media only screen and (min-width: 768px) and (max-width: 1024px) {
+  @media only screen and (min-width: 768px) and (max-width: 1279px) {
     font-size: 48px;
     line-height: 55px;
     letter-spacing: 0.04em;
@@ -81,7 +81,7 @@
   margin-bottom: 60px;
 
   // For tablets
-  @media only screen and (min-width: 768px) and (max-width: 1024px) {
+  @media only screen and (min-width: 768px) and (max-width: 1279px) {
     margin-right: 32px;
     gap: 16px;
   }
@@ -111,7 +111,7 @@
   position: relative;
 
   // For tablets
-  @media only screen and (min-width: 768px) and (max-width: 1024px) {
+  @media only screen and (min-width: 768px) and (max-width: 1279px) {
     width: 224px;
     height: 473px;
     top: -250px;
@@ -141,7 +141,7 @@
   cursor: pointer;
 
   // For tablets
-  @media only screen and (min-width: 768px) and (max-width: 1024px) {
+  @media only screen and (min-width: 768px) and (max-width: 1279px) {
     width: 224px;
     height: 473px;
     top: 250px;
@@ -170,7 +170,7 @@
 }
 
 .products__wrapper2 {
-  background-color: #f0d1a5;
+  background-color: $brown-color;
   border-radius: 24px;
   display: flex;
   flex-direction: column;
@@ -184,7 +184,7 @@
   cursor: pointer;
 
   // For tablets
-  @media only screen and (min-width: 768px) and (max-width: 1024px) {
+  @media only screen and (min-width: 768px) and (max-width: 1279px) {
     width: 224px;
     height: 473px;
     top: 250px;
@@ -213,7 +213,7 @@
 }
 
 .products__wrapper3 {
-  background-color: #c2e297;
+  background-color: $green-color;
   border-radius: 24px;
   display: flex;
   flex-direction: column;
@@ -227,7 +227,7 @@
   cursor: pointer;
 
   // For tablets
-  @media only screen and (min-width: 768px) and (max-width: 1024px) {
+  @media only screen and (min-width: 768px) and (max-width: 1279px) {
     width: 224px;
     height: 473px;
     top: 250px;
@@ -257,18 +257,28 @@
 
 .products__subtitle {
   font-family: 'Titan One';
-  font-weight: var(--font-weight-400);
-  font-size: 30px;
+  font-weight: $font-weight-400;
+  font-size: $font-size-30;
   line-height: 23px;
   text-align: center;
   letter-spacing: 0.04em;
   text-transform: uppercase;
-  color: #ffffff;
+  color: $white-color;
   margin-bottom: 32px;
 
   // For tablets
-  @media only screen and (min-width: 768px) and (max-width: 1024px) {
+  @media only screen and (min-width: 768px) and (max-width: 1279px) {
     margin-top: -12px;
+    font-size: $font-size-20;
+    line-height: 23px;
+    letter-spacing: 0.04em;
+  }
+
+  // For mobile devices
+  @media only screen and (max-width: 767px) {
+    font-size: $font-size-20;
+    line-height: 23px;
+    letter-spacing: 0.04em;
   }
 }
 
@@ -278,7 +288,7 @@
   margin-bottom: 12px;
 
   // For tablets
-  @media only screen and (min-width: 768px) and (max-width: 1024px) {
+  @media only screen and (min-width: 768px) and (max-width: 1279px) {
     margin-top: -12px;
     margin-bottom: 0px;
   }
@@ -291,25 +301,30 @@
   line-height: 176%;
   text-align: center;
   letter-spacing: 0.04em;
-  color: #ffffff;
+  color: $white-color;
   margin-bottom: 12px;
 
   // For tablets
-  @media only screen and (min-width: 768px) and (max-width: 1024px) {
+  @media only screen and (min-width: 768px) and (max-width: 1279px) {
     width: 160px;
     height: 150px;
+  }
+
+  // For mobile devices
+  @media only screen and (max-width: 767px) {
+    font-size: $font-size-16;
   }
 }
 
 .products__arrow {
-  background-color: white;
+  $white-color: white;
   border-radius: 50%;
   align-self: center;
   margin-top: 60px;
   margin-bottom: 60px;
 
   // For tablets
-  @media only screen and (min-width: 768px) and (max-width: 1024px) {
+  @media only screen and (min-width: 768px) and (max-width: 1279px) {
     margin-top: 40px;
   }
 
@@ -319,7 +334,7 @@
   }
 
   &:hover {
-    background-color: #ffa5ba;
+    background-color: $secondary-color;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
