--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -317,7 +317,7 @@
 }
 
 .products__arrow {
-  $white-color: white;
+  background-color: $white-color;
   border-radius: 50%;
   align-self: center;
   margin-top: 60px;
