--- a/src/sass/_vars.scss
+++ b/src/sass/_vars.scss
@@ -22,3 +22,8 @@ $font-size-20: 20px;
 $font-size-30: 30px;
 $font-size-38: 38px;
 $font-size-58: 58px;
+
+$stripe-size: 100px;
+$color1: #ffa5ba;
+$color2: #ffb8ca;
+$duration: 3s;
